[package]
name = "onodejs"
version = "0.0.4"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"

[dependencies]
offregisters-lib = { git = "https://github.com/offscale/offregisters-lib", branch = "master" }
offregisters-nodejs = { git = "https://github.com/offscale/offregisters-nodejs", branch = "master" }
structopt = "0.2.15"
pager = "0.15.0"
url = "1.7.2"
dirs = "1.0.5"
